# crypto-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: binance_market.rs  main.rs
src/exchange/: mod.rs  my_binance.rs
src/strategy/: core_satellite_investment.rs  engulfing.rs  mod.rs  rsi.rs
src/utils/: constants.rs  mod.rs  utility.rs
