[package]
name = "trading-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
dotenv = "0.15.0"
ta-lib-wrapper = "0.2.0"
log = "0.4"
simplelog = "0.10.0"